Update instructions to get people started using this template

--- a/_event/2024-04.md
+++ b/_event/2024-04.md
@@ -6,4 +6,4 @@ title: April Example meetup
 location: Example address
 ---
 
-For this example event, ...
+TOUSE Change this example event to your next event
