--- a/_event/2026-04.md
+++ b/_event/2026-04.md
@@ -4,6 +4,7 @@ start: 2026-04-19 14:00
 end: 2026-04-19 13:00
 title: April Example meetup
 location: Example address
+description: "This is an example."
 ---
 
 TOUSE Change this example event to your next event
